# pipelines

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Makefile  README.md  rustfmt.toml
.jefferies/: pipeline.yaml
app_config/: Cargo.toml
app_config/src/: lib.rs
backplane/: Cargo.toml
backplane/src/: lib.rs
config/: Cargo.toml  default.toml
config/src/: lib.rs
coordinator/: Cargo.toml
coordinator/src/: coordinator.rs  dispatcher.rs  lib.rs  message.rs  reaper.rs  registry.rs  run.rs
docs/: architecture.md
examples/: multinode-pipeline.yaml
execution/: Cargo.toml
execution/src/: lib.rs  node.rs  pipeline.rs  run.rs
execution/src/executors/: mod.rs  podman.rs
execution/src/executors/kubernetes/: mod.rs  node.rs  pipeline.rs
execution/src/executors/podman/: mod.rs  node.rs  pipeline.rs
pipelines/: Cargo.toml
pipelines/src/: lib.rs  pipeline.rs
providers/: Cargo.toml
providers/src/: crypto.rs  github.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs
src/: lib.rs  main.rs  node.rs  yaml_parser.rs
state_store/: Cargo.toml
state_store/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs  sqlite.rs
storage/src/sqlite/: history.rs  mod.rs  registry.rs
