[package]
name = "pipelines"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["config","execution", "server"]

[workspace.dependencies]
serde = "1.0.228"
serde-saphyr = "0.0.22"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
config = { path = "config" }
execution = { path = "execution" }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
execution = { workspace = true }
