[package]
name = "jefferies"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["config", "execution", "server", "storage"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-saphyr = "0.0.22"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.23.0", features = ["v4"] }
reqwest = "0.13.2"
config = { path = "config" }
execution = { path = "execution" }
storage = { path = "storage" }
server = { path = "server" }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
execution = { workspace = true }
server = { workspace = true }
storage = { workspace = true }
kube = { version = "3.1.0", features = ["client"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
