[package]
name = "jefferies"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["app_config", "coordinator", "pipelines", "providers", "server"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-saphyr = "0.0.22"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.23.0", features = ["v4"] }
reqwest = "0.13.2"
kube = { version = "3.1.0", features = ["client"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
toml = "1.1.2"
config = "0.15.22"
anyhow = "1.0.102"
app_config = { path = "app_config" }
coordinator = { path = "coordinator" }
server = { path = "server" }
pipelines = { path = "pipelines" }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
providers = { path = "providers" }
octocrab = "0.49.7"
jsonwebtoken = { version = "10.3.0", features = ["use_pem"] }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
app_config = { workspace = true }
server = { workspace = true }
