[package]
name = "backplane"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
lapin = "2.5"
deadpool-lapin = { version = "0.12" }
