[package]
name = "execution"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
config = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
