[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
execution = { workspace = true }
storage = { workspace = true }

[dev-dependencies]
tower = "0.5.3"
