[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
backplane = { workspace = true }
coordinator = { workspace = true }
serde = { workspace = true }
state_store = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
app_config = { workspace = true }
providers = { workspace = true }
