[package]
name = "state_store"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
pipelines = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
